syntax = "proto3";

package go.micro.bookstore.srv.account;

service Account {
	rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
	rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {}
	rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountResponse) {}
	rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse) {}
	rpc Login(LoginRequest) returns (LoginResponse) {}
	rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

message Credential {
	string id = 1;
	string username = 2;
	string email = 3;
	string password = 4;
	string profile_id = 5;
	string author_id = 6;
	bool is_verified = 7;
	int64 last_login = 8;
	int64 created_at = 9;
	int64 updated_at = 10; 
}

message CreateAccountRequest {
	Credential account = 1;
}

message CreateAccountResponse {
	int32 code = 1;
	string detail = 2;
	Credential account = 3;
}

message GetAccountRequest {
	string id = 1;
}

message GetAccountResponse {
	int32 code = 1;
	string detail = 2;
	Credential account = 3;
}

message UpdateAccountRequest {
	Credential account = 1;
}

message UpdateAccountResponse {
	int32 code = 1;
	string detail = 2;
	Credential account = 3;
}

message DeleteAccountRequest {
	string id = 1;
}

message DeleteAccountResponse {
	int32 code = 1;
	string detail = 2;
}

message LoginRequest {
	string username = 1;
	string email = 2;
	string password = 3;
}

message LoginResponse {
	int32 code = 1;
	string detail = 2;
}

message LogoutRequest {}

message LogoutResponse {
	int32 code = 1;
	string detail = 2;
}