syntax = "proto3";

package go.micro.bookstore.srv.user;

service User {
	rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse) {}
	rpc GetProfile(GetProfileRequest) returns (GetProfileResponse) {}
	rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {}
	rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse) {}
	rpc SearchProfile(SearchProfileRequest) returns (SearchProfileResponse) {}
}

message Profile {
	string id = 1;
	string username = 2;
	string fullname = 3;
	string email = 4;
	string image = 5;
	int64 created_at = 6;
	int64 updated_at = 7; 
}

message CreateProfileRequest {
	Profile profile = 1;
}

message CreateProfileResponse {
	int32 code = 1;
	string detail = 2;
	Profile profile = 3;
}

message GetProfileRequest {
	string username = 1;
}

message GetProfileResponse {
	int32 code = 1;
	string detail = 2;
	Profile profile = 3;
}

message UpdateProfileRequest {
	Profile profile = 1;
}

message UpdateProfileResponse {
	int32 code = 1;
	string detail = 2;
	Profile profile = 3;
}

message DeleteProfileRequest {
	string id = 1;
}

message DeleteProfileResponse {
	int32 code = 1;
	string detail = 2;
}

message SearchProfileRequest {
	string name = 1;
}

message SearchProfileResponse {
	int32 code = 1;
	string detail = 2;
	repeated Profile profile = 3;
}